--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,45 +2,52 @@
   "new-game": "New game",
   "settings": "Settings",
   "number-of-players": "Number of players",
-  "number-of-factions": "Number of factions",
+  "number-of-factions": "Number of factions to choose from",
   "number-of-factions-note": "Players can choose between {{num}} factions",
-  "include-expansion-fire-ice": "Include expansion: Fire & Ice",
-  "include-expansion-merchants": "Include expansion: Merchants of the Seas",
   "generate": "Generate",
   "factions": "Factions",
+  "factions-selected": "{{num}} factions selected…",
   "bonus-cards": "Bonus cards",
   "scoring-tiles": "Scoring tiles",
   "final-scoring-tile": "Final scoring tile",
-  "faction": {
-    "alchemists": "Alchemists",
-    "auren": "Auren",
-    "chaosmagicians": "Chaos Magicians",
-    "cultists": "Cultists",
-    "darklings": "Darklings",
-    "dwarves": "Dwarves",
-    "engineers": "Engineers",
-    "fakirs": "Fakirs",
-    "giants": "Giants",
-    "halflings": "Halflings",
-    "mermaids": "Mermaids",
-    "nomads": "Nomads",
-    "riverwalkers": "Riverwalkers",
-    "shapeshifters": "Shapeshifters",
-    "swarmlings": "Swarmlings",
-    "witches": "Witches",
-    "acolytes": "Acolytes",
-    "dragonlords": "Dragonlords",
-    "icemaidens": "Ice Maidens",
-    "yetis": "Yetis",
-    "dryads": "Dryads",
-    "illusionists": "Illusionists",
-    "middlemen": "Middle Men",
-    "mutants": "Mutants",
-    "seafarers": "Seafarers",
-    "shamans": "Shamans",
-    "shaolins": "Shaolins",
-    "vizirs": "Vizirs",
-    "efreets": "Efreets",
-    "inuits": "Inuits"
+  "alchemists": "Alchemists",
+  "auren": "Auren",
+  "chaosmagicians": "Chaos Magicians",
+  "cultists": "Cultists",
+  "darklings": "Darklings",
+  "dwarves": "Dwarves",
+  "engineers": "Engineers",
+  "fakirs": "Fakirs",
+  "giants": "Giants",
+  "halflings": "Halflings",
+  "mermaids": "Mermaids",
+  "nomads": "Nomads",
+  "riverwalkers": "Riverwalkers",
+  "shapeshifters": "Shapeshifters",
+  "swarmlings": "Swarmlings",
+  "witches": "Witches",
+  "acolytes": "Acolytes",
+  "dragonlords": "Dragonlords",
+  "icemaidens": "Ice Maidens",
+  "yetis": "Yetis",
+  "dryads": "Dryads",
+  "illusionists": "Illusionists",
+  "middlemen": "Middle Men",
+  "mutants": "Mutants",
+  "seafarers": "Seafarers",
+  "shamans": "Shamans",
+  "shaolins": "Shaolins",
+  "vizirs": "Vizirs",
+  "efreets": "Efreets",
+  "inuits": "Inuits",
+  "profile": "Profile",
+  "profile-name": {
+    "basic": "Basic game set, without extensions (Official)",
+    "fire-ice": "Fire & Ice (Official)",
+    "mechants": "Merchants of the Seas (Official)",
+    "fire-ice-and-mechants": "Fire & Ice + Merchants of the Seas (Official)",
+    "power-coming": "Power is coming, with basic game set",
+    "power-coming-and-fire-ice": "Power is coming + Fire & Ice",
+    "power-coming-and-fire-ice-merchants": "Power is coming + Fire & Ice + Merchants of the Sea"
   }
 }
