Style change and refactor

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,14 +1,16 @@
 {
   "new-game": "New game",
+  "profile": "Profile",
   "settings": "Settings",
   "number-of-players": "Number of players",
-  "number-of-factions": "Number of factions to choose from",
-  "number-of-factions-note": "Players can choose between {{num}} factions",
-  "generate": "Generate",
   "factions": "Factions",
+  "factions-note": "Factions to pick randomly from.",
   "factions-selected": "{{num}} factions selected…",
-  "bonus-cards": "Bonus cards",
+  "number-of-factions": "Number of factions",
+  "number-of-factions-note": "Players can choose between {{num}} factions.",
   "extra-final-scoring-tile": "Include extra final scoring tile",
+  "generate": "Generate",
+  "bonus-cards": "Bonus cards",
   "scoring-tiles": "Scoring tiles",
   "final-scoring-tiles": "Final scoring tiles",
   "alchemists": "Alchemists",
@@ -41,7 +43,6 @@
   "vizirs": "Vizirs",
   "efreets": "Efreets",
   "inuits": "Inuits",
-  "profile": "Profile",
   "predefined-profile": {
     "basic": "Basic game set, without extensions (Official)",
     "fire-ice": "Fire & Ice (Official)",
