Add bonus cards

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,45 +12,64 @@
   "extra-final-scoring-tile": "Include extra final scoring tile",
   "generate": "Generate",
   "bonus-cards": "Bonus cards",
+  "bonus-cards-note": "Bonus cards to pick randomly from.",
+  "bonus-cards-selected": "{{num}} bonus cards selected…",
+  "bonus-cards-invalid": "As many bonus cards as players + 3 are necessary. Select more bonus cards.",
   "scoring-tiles": "Scoring tiles",
   "final-scoring-tiles": "Final scoring tiles",
-  "alchemists": "Alchemists",
-  "auren": "Auren",
-  "chaosmagicians": "Chaos Magicians",
-  "cultists": "Cultists",
-  "darklings": "Darklings",
-  "dwarves": "Dwarves",
-  "engineers": "Engineers",
-  "fakirs": "Fakirs",
-  "giants": "Giants",
-  "halflings": "Halflings",
-  "mermaids": "Mermaids",
-  "nomads": "Nomads",
-  "riverwalkers": "Riverwalkers",
-  "shapeshifters": "Shapeshifters",
-  "swarmlings": "Swarmlings",
-  "witches": "Witches",
-  "acolytes": "Acolytes",
-  "dragonlords": "Dragonlords",
-  "icemaidens": "Ice Maidens",
-  "yetis": "Yetis",
-  "dryads": "Dryads",
-  "illusionists": "Illusionists",
-  "middlemen": "Middle Men",
-  "mutants": "Mutants",
-  "seafarers": "Seafarers",
-  "shamans": "Shamans",
-  "shaolins": "Shaolins",
-  "vizirs": "Vizirs",
-  "efreets": "Efreets",
-  "inuits": "Inuits",
+  "faction": {
+    "alchemists": "Alchemists",
+    "auren": "Auren",
+    "chaosmagicians": "Chaos Magicians",
+    "cultists": "Cultists",
+    "darklings": "Darklings",
+    "dwarves": "Dwarves",
+    "engineers": "Engineers",
+    "fakirs": "Fakirs",
+    "giants": "Giants",
+    "halflings": "Halflings",
+    "mermaids": "Mermaids",
+    "nomads": "Nomads",
+    "riverwalkers": "Riverwalkers",
+    "shapeshifters": "Shapeshifters",
+    "swarmlings": "Swarmlings",
+    "witches": "Witches",
+    "acolytes": "Acolytes",
+    "dragonlords": "Dragonlords",
+    "icemaidens": "Ice Maidens",
+    "yetis": "Yetis",
+    "dryads": "Dryads",
+    "illusionists": "Illusionists",
+    "middlemen": "Middle Men",
+    "mutants": "Mutants",
+    "seafarers": "Seafarers",
+    "shamans": "Shamans",
+    "shaolins": "Shaolins",
+    "vizirs": "Vizirs",
+    "efreets": "Efreets",
+    "inuits": "Inuits"
+  },
   "predefined-profile": {
     "basic": "Basic game set, without extensions (Official)",
     "fire-ice": "Fire & Ice (Official)",
-    "mechants": "Merchants of the Seas (Official)",
-    "fire-ice-and-mechants": "Fire & Ice + Merchants of the Seas (Official)",
     "power-coming": "Power is coming, with basic game set",
-    "power-coming-and-fire-ice": "Power is coming + Fire & Ice",
-    "power-coming-and-fire-ice-merchants": "Power is coming + Fire & Ice + Merchants of the Sea"
+    "fire-ice-and-power-coming": "Fire & Ice + Power is coming",
+    "all-official": "Fire & Ice + Merchants of the Seas + Mini expansion (Official)",
+    "all-official-and-unofficial": "All official and unofficial expansions"
+  },
+  "bonus-card": {
+    "priest": "Priest",
+    "worker-and-power": "1 additional worker and 3 power",
+    "6-coins": "6 coins",
+    "power-and-shipping": "3 power and temporary shipping upgrade",
+    "spade-and-coins": "1 spade and 2 coins",
+    "cult-track-and-coins": "Advance 1 in a cult track and 2 coins",
+    "points-dwelling-and-coins": "1 point for each Dwelling and 2 coins",
+    "points-trading-house-and-worker": "2 points for each Trading House and 1 worker",
+    "points-3rd-building-and-workers": "4 points for each 3<sup>rd</sup> level building and 2 workers",
+    "points-shipping-and-power": "3 points for shipping upgrades and 3 power",
+    "points-trade-and-ship": "1 point for each trade and 1 ship",
+    "points-ships-coind-and-worker": "3 points for each ship, 1 coin and 1 worker",
+    "move-ships-and-ship": "Move ships and and 1 ship"
   }
 }
