--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,6 @@
 {
   "new-game": "New game",
   "profile": "Profile",
-  "settings": "Settings",
   "number-of-players": "Number of players",
   "factions": "Factions",
   "factions-note": "Factions to pick randomly from.",
@@ -9,14 +8,19 @@
   "factions-invalid": "There are more players than distinct terrains for the selected factions. Select more factions.",
   "number-of-factions": "Number of factions",
   "number-of-factions-note": "Players can choose between {{num}} factions.",
-  "extra-final-scoring-tile": "Include extra final scoring tile",
-  "generate": "Generate",
   "bonus-cards": "Bonus cards",
   "bonus-cards-note": "Bonus cards to pick randomly from.",
   "bonus-cards-selected": "{{num}} bonus cards selected…",
   "bonus-cards-invalid": "As many bonus cards as players + 3 are necessary. Select more bonus cards.",
   "scoring-tiles": "Scoring tiles",
+  "extra-final-scoring-tile": "Include extra final scoring tile",
   "final-scoring-tiles": "Final scoring tiles",
+  "generate": "Generate",
+  "settings": "Settings",
+  "about": "About",
+  "about-description": "Help doing Terra Mystica setup by choosing factions and tiles randomly.",
+  "version": "Version:",
+  "build-date": "Build date:",
   "faction": {
     "alchemists": "Alchemists",
     "auren": "Auren",
