Add scoring and final scoring tiles
(Work in progress)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,113 +1,105 @@
 {
-  "new-game": "New game",
-  "profile": "Profile",
-  "number-of-players": "Number of players",
-  "factions": "Factions",
-  "factions-note": "Factions to pick randomly from.",
-  "factions-selected": "{{num}} factions selected…",
-  "factions-invalid": "There are more players than distinct terrains for the selected factions. Select more factions.",
-  "number-of-factions": "Number of factions",
-  "number-of-factions-note": "Players can choose between {{num}} factions.",
-  "bonus-cards": "Bonus cards",
+  "about-description": "Help doing Terra Mystica setup by choosing factions and tiles randomly.",
+  "about": "About",
+  "action-phase-scoring.any-track-upgrade": "2 victory points when advancing on the Shipping or Exchange tracks.",
+  "action-phase-scoring.dwelling": "2 victory points when building a dwelling.",
+  "action-phase-scoring.level-3-building": "5 victory points when building the stronghold, sanctuary or shipyard.",
+  "action-phase-scoring.spade": "2 victory points when using spades.",
+  "action-phase-scoring.temple": "4 victory points when building a temple.",
+  "action-phase-scoring.town": "2 victory points when founding a town.",
+  "action-phase-scoring.trade": "2 victory points when resolving a trade.",
+  "action-phase-scoring.trading-house": "3 victory points when building a trading house.",
+  "action-phase-scoring": "Action phase scoring:",
+  "bonus-card.6-coins": "6 coins",
+  "bonus-card.cult-track-and-coins": "Advance 1 in a cult track and 2 coins",
+  "bonus-card.move-ships-and-ship": "Move ships and and 1 ship",
+  "bonus-card.points-3rd-building-and-workers": "4 points for each 3<sup>rd</sup> level building and 2 workers",
+  "bonus-card.points-dwelling-and-coins": "1 point for each Dwelling and 2 coins",
+  "bonus-card.points-shipping-and-power": "3 points for shipping upgrades and 3 power",
+  "bonus-card.points-ships-coind-and-worker": "3 points for each ship, 1 coin and 1 worker",
+  "bonus-card.points-trade-and-ship": "1 point for each trade and 1 ship",
+  "bonus-card.points-trading-house-and-worker": "2 points for each Trading House and 1 worker",
+  "bonus-card.power-and-shipping": "3 power and temporary shipping upgrade",
+  "bonus-card.priest": "Priest",
+  "bonus-card.spade-and-coins": "1 spade and 2 coins",
+  "bonus-card.worker-and-power": "1 additional worker and 3 power",
+  "bonus-cards-invalid": "As many bonus cards as players + 3 are necessary. Select more bonus cards.",
   "bonus-cards-note": "Bonus cards to pick randomly from.",
   "bonus-cards-selected": "{{num}} bonus cards selected…",
-  "bonus-cards-invalid": "As many bonus cards as players + 3 are necessary. Select more bonus cards.",
-  "scoring-tiles": "Scoring tiles",
-  "extra-final-scoring-tile": "Include extra final scoring tile",
-  "final-scoring-tiles": "Final scoring tiles",
-  "generate": "Generate",
-  "settings": "Settings",
-  "about": "About",
-  "about-description": "Help doing Terra Mystica setup by choosing factions and tiles randomly.",
-  "version": "Version:",
+  "bonus-cards": "Bonus cards",
   "build-date": "Build date:",
-  "faction": {
-    "alchemists": "Alchemists",
-    "auren": "Auren",
-    "chaosmagicians": "Chaos Magicians",
-    "cultists": "Cultists",
-    "darklings": "Darklings",
-    "dwarves": "Dwarves",
-    "engineers": "Engineers",
-    "fakirs": "Fakirs",
-    "giants": "Giants",
-    "halflings": "Halflings",
-    "mermaids": "Mermaids",
-    "nomads": "Nomads",
-    "riverwalkers": "Riverwalkers",
-    "shapeshifters": "Shapeshifters",
-    "swarmlings": "Swarmlings",
-    "witches": "Witches",
-    "acolytes": "Acolytes",
-    "dragonlords": "Dragonlords",
-    "icemaidens": "Ice Maidens",
-    "yetis": "Yetis",
-    "dryads": "Dryads",
-    "illusionists": "Illusionists",
-    "middlemen": "Middle Men",
-    "mutants": "Mutants",
-    "seafarers": "Seafarers",
-    "shamans": "Shamans",
-    "shaolins": "Shaolins",
-    "vizirs": "Vizirs",
-    "efreets": "Efreets",
-    "inuits": "Inuits"
-  },
-  "predefined-profile": {
-    "basic": "Basic game set, without extensions (Official)",
-    "fire-ice": "Fire & Ice (Official)",
-    "fire-ice-and-mini-expansion": "Fire & Ice + Mini expansion (Official)",
-    "power-coming": "Power is coming, with basic game set",
-    "fire-ice-and-mini-expansion-and-power-coming": "Fire & Ice  + Mini expansion + Power is coming",
-    "all-official": "Fire & Ice + Mini expansion + Merchants of the Seas (Official)",
-    "all-official-and-unofficial": "All official and unofficial expansions"
-  },
-  "bonus-card": {
-    "priest": "Priest",
-    "worker-and-power": "1 additional worker and 3 power",
-    "6-coins": "6 coins",
-    "power-and-shipping": "3 power and temporary shipping upgrade",
-    "spade-and-coins": "1 spade and 2 coins",
-    "cult-track-and-coins": "Advance 1 in a cult track and 2 coins",
-    "points-dwelling-and-coins": "1 point for each Dwelling and 2 coins",
-    "points-trading-house-and-worker": "2 points for each Trading House and 1 worker",
-    "points-3rd-building-and-workers": "4 points for each 3<sup>rd</sup> level building and 2 workers",
-    "points-shipping-and-power": "3 points for shipping upgrades and 3 power",
-    "points-trade-and-ship": "1 point for each trade and 1 ship",
-    "points-ships-coind-and-worker": "3 points for each ship, 1 coin and 1 worker",
-    "move-ships-and-ship": "Move ships and and 1 ship"
-  },
-  "action-phase-scoring": {
-    "dwelling": "2 victory points when building a dwelling.",
-    "trading-house": "3 victory points when building a trading house.",
-    "level-3-building": "5 victory points when building the stronghold, sanctuary or shipyard.",
-    "spade": "2 victory points when using spades.",
-    "town": "2 victory points when founding a town.",
-    "temple": "4 victory points when building a temple.",
-    "trade": "2 victory points when resolving a trade.",
-    "any-track-upgrade": "2 victory points when advancing on the Shipping or Exchange tracks."
-  },
-  "reward-type": {
-    "priest": "gain {{count}} priest.",
-    "power": "gain {{count}} power.",
-    "coin": "gain {{count}} coins.",
-    "worker": "gain {{count}} worker.",
-    "spade": "gain {{count}} spade.",
-    "ship": "gain {{count}} ship.",
-    "shipping-upgrade": "advance on the Shipping track."
-  },
-  "reward-condition": {
-    "cultFire": "for each {{count}} spaces in the cult for fire",
-    "cultWater": "for each {{count}} spaces in the cult for fire",
-    "cultEarth": "for each {{count}} spaces in the cult for fire",
-    "cultAir": "for each {{count}} spaces in the cult for fire",
-    "priest": "for each priest placed in any cult"
-  },
-  "final-scoring-tile": {
-    "greatest-distance": "Greatest distance",
-    "distance-stronghold-sanctuary": "Distance between Stronghold and Sanctuary",
-    "outpost": "Number of structures in the border",
-    "settlements:": "Number of settlements",
-    "trade-markers": "Most trade markers"
-  }
+  "end-round-reward": "End of round reward:",
+  "extra-final-scoring-tiles-note": "Extra final scoring tiles to pick randomly from.",
+  "extra-final-scoring-tiles-selected": "{{num}} extra final scoring tiles selected…",
+  "extra-final-scoring-tiles": "Extra final scoring tiles",
+  "faction.acolytes": "Acolytes",
+  "faction.alchemists": "Alchemists",
+  "faction.auren": "Auren",
+  "faction.chaosmagicians": "Chaos Magicians",
+  "faction.cultists": "Cultists",
+  "faction.darklings": "Darklings",
+  "faction.dragonlords": "Dragonlords",
+  "faction.dryads": "Dryads",
+  "faction.dwarves": "Dwarves",
+  "faction.efreets": "Efreets",
+  "faction.engineers": "Engineers",
+  "faction.fakirs": "Fakirs",
+  "faction.giants": "Giants",
+  "faction.halflings": "Halflings",
+  "faction.icemaidens": "Ice Maidens",
+  "faction.illusionists": "Illusionists",
+  "faction.inuits": "Inuits",
+  "faction.mermaids": "Mermaids",
+  "faction.middlemen": "Middle Men",
+  "faction.mutants": "Mutants",
+  "faction.nomads": "Nomads",
+  "faction.riverwalkers": "Riverwalkers",
+  "faction.seafarers": "Seafarers",
+  "faction.shamans": "Shamans",
+  "faction.shaolins": "Shaolins",
+  "faction.shapeshifters": "Shapeshifters",
+  "faction.swarmlings": "Swarmlings",
+  "faction.vizirs": "Vizirs",
+  "faction.witches": "Witches",
+  "faction.yetis": "Yetis",
+  "factions-invalid": "There are more players than distinct terrains for the selected factions. Select more factions.",
+  "factions-note": "Factions to pick randomly from.",
+  "factions-selected": "{{num}} factions selected…",
+  "factions": "Factions",
+  "final-scoring-tile.distance-stronghold-sanctuary": "Distance between Stronghold and Sanctuary",
+  "final-scoring-tile.greatest-distance": "Greatest distance",
+  "final-scoring-tile.outpost": "Number of structures in the border",
+  "final-scoring-tile.settlements": "Number of settlements",
+  "final-scoring-tile.trade-markers": "Most trade markers",
+  "generate": "Generate",
+  "new-game": "New game",
+  "number-of-factions-note": "Players can choose between {{num}} factions.",
+  "number-of-factions": "Number of factions",
+  "number-of-players": "Number of players",
+  "predefined-profile.all-official-and-unofficial": "All official and unofficial expansions",
+  "predefined-profile.all-official": "Fire & Ice + Mini expansion + Merchants of the Seas (Official)",
+  "predefined-profile.basic": "Basic game set, without extensions (Official)",
+  "predefined-profile.fire-ice-and-mini-expansion-and-power-coming": "Fire & Ice  + Mini expansion + Power is coming",
+  "predefined-profile.fire-ice-and-mini-expansion": "Fire & Ice + Mini expansion (Official)",
+  "predefined-profile.fire-ice": "Fire & Ice (Official)",
+  "predefined-profile.power-coming": "Power is coming, with basic game set",
+  "profile": "Profile",
+  "reward-condition.cultAir": "for each {{count}} spaces in the cult for fire",
+  "reward-condition.cultEarth": "for each {{count}} spaces in the cult for fire",
+  "reward-condition.cultFire": "for each {{count}} spaces in the cult for fire",
+  "reward-condition.cultWater": "for each {{count}} spaces in the cult for fire",
+  "reward-condition.priest": "for each priest placed in any cult",
+  "reward-type.coin": "gain {{count}} coins.",
+  "reward-type.power": "gain {{count}} power.",
+  "reward-type.priest": "gain {{count}} priest.",
+  "reward-type.ship": "gain {{count}} ship.",
+  "reward-type.shipping-upgrade": "advance on the Shipping track.",
+  "reward-type.spade": "gain {{count}} spade.",
+  "reward-type.worker": "gain {{count}} worker.",
+  "scoring-tiles-invalid": "At least 6 scoring tiles are required, and it has to be possible to get some combination in which three cults of the same element do not appear.",
+  "scoring-tiles-note": "Scoring tiles to pick randomly from.",
+  "scoring-tiles-selected": "{{num}} scoring tiles selected…",
+  "scoring-tiles": "Scoring tiles",
+  "settings": "Settings",
+  "version": "Version:"
 }
