Do not show select text

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,14 +23,12 @@
   "bonus-card.priest": "Priest",
   "bonus-card.spade-and-coins": "1 spade and 2 coins",
   "bonus-card.worker-and-power": "1 additional worker and 3 power",
+  "bonus-cards-description": "{{num}} bonus cards to pick randomly from.",
   "bonus-cards-invalid": "As many bonus cards as players + 3 are necessary. Select more bonus cards.",
-  "bonus-cards-note": "Bonus cards to pick randomly from.",
-  "bonus-cards-selected": "{{num}} bonus cards selected…",
   "bonus-cards": "Bonus cards",
   "build-date": "Build date:",
   "end-round-reward": "End of round reward:",
-  "extra-final-scoring-tiles-note": "Extra final scoring tiles to pick randomly from.",
-  "extra-final-scoring-tiles-selected": "{{num}} extra final scoring tiles selected…",
+  "extra-final-scoring-tiles-description": "{{num}} extra final scoring tiles to pick randomly from.",
   "extra-final-scoring-tiles": "Extra final scoring tiles",
   "faction.acolytes": "Acolytes",
   "faction.alchemists": "Alchemists",
@@ -62,9 +60,8 @@
   "faction.vizirs": "Vizirs",
   "faction.witches": "Witches",
   "faction.yetis": "Yetis",
+  "factions-description": "{{num}} factions to pick randomly from.",
   "factions-invalid": "There are more players than distinct terrains for the selected factions. Select more factions.",
-  "factions-note": "Factions to pick randomly from.",
-  "factions-selected": "{{num}} factions selected…",
   "factions": "Factions",
   "final-scoring-tile.distance-stronghold-sanctuary": "Distance between Stronghold and Sanctuary",
   "final-scoring-tile.greatest-distance": "Greatest distance",
@@ -73,7 +70,7 @@
   "final-scoring-tile.trade-markers": "Most trade markers",
   "generate": "Generate",
   "new-game": "New game",
-  "number-of-factions-note": "Players can choose between {{num}} factions.",
+  "number-of-factions-description": "Players can choose between {{num}} factions.",
   "number-of-factions": "Number of factions",
   "number-of-players": "Number of players",
   "predefined-profile.all-official-and-unofficial": "All official and unofficial expansions",
@@ -96,9 +93,8 @@
   "reward-type.shipping-upgrade": "advance on the Shipping track.",
   "reward-type.spade": "gain {{count}} spade.",
   "reward-type.worker": "gain {{count}} worker.",
+  "scoring-tiles-description": "{{num}} scoring tiles to pick randomly from.",
   "scoring-tiles-invalid": "At least 6 scoring tiles are required, and it has to be possible to get some combination in which three cults of the same element do not appear.",
-  "scoring-tiles-note": "Scoring tiles to pick randomly from.",
-  "scoring-tiles-selected": "{{num}} scoring tiles selected…",
   "scoring-tiles": "Scoring tiles",
   "settings": "Settings",
   "version": "Version:"
