--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -81,10 +81,10 @@
   "predefined-profile.fire-ice": "Fire & Ice (Official)",
   "predefined-profile.power-coming": "Power is coming, with basic game set",
   "profile": "Profile",
-  "reward-condition.cultAir": "for each {{count}} spaces in the cult for fire",
-  "reward-condition.cultEarth": "for each {{count}} spaces in the cult for fire",
-  "reward-condition.cultFire": "for each {{count}} spaces in the cult for fire",
-  "reward-condition.cultWater": "for each {{count}} spaces in the cult for fire",
+  "reward-condition.cult-air": "for each {{count}} spaces in the cult of air",
+  "reward-condition.cult-earth": "for each {{count}} spaces in the cult of earth",
+  "reward-condition.cult-fire": "for each {{count}} spaces in the cult of fire",
+  "reward-condition.cult-water": "for each {{count}} spaces in the cult of water",
   "reward-condition.priest": "for each priest placed in any cult",
   "reward-type.coin": "gain {{count}} coins.",
   "reward-type.power": "gain {{count}} power.",
