Select the scoring tiles with in a new page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,7 @@
   "bonus-cards-invalid": "As many bonus cards as players + 3 are necessary. Select more bonus cards.",
   "bonus-cards": "Bonus cards",
   "build-date": "Build date:",
+  "cancel": "Cancel",
   "end-round-reward": "End of round reward:",
   "extra-final-scoring-tiles-description": "{{num}} extra final scoring tiles to pick randomly from.",
   "extra-final-scoring-tiles": "Extra final scoring tiles",
@@ -73,6 +74,7 @@
   "number-of-factions-description": "Players can choose between {{num}} factions.",
   "number-of-factions": "Number of factions",
   "number-of-players": "Number of players",
+  "ok": "OK",
   "predefined-profile.all-official-and-unofficial": "All official and unofficial expansions",
   "predefined-profile.all-official": "Fire & Ice + Mini expansion + Merchants of the Seas (Official)",
   "predefined-profile.basic": "Basic game set, without extensions (Official)",
