Add game boards

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -69,6 +69,14 @@
   "final-scoring-tile.outpost": "Number of structures in the border",
   "final-scoring-tile.settlements": "Number of settlements",
   "final-scoring-tile.trade-markers": "Most trade markers",
+  "game-board.fire-ice-variant": "Fire & Ice variant",
+  "game-board.fjords": "Fjords (Merchants expansion)",
+  "game-board.lakes": "Lakes (Merchants expansion)",
+  "game-board.original-revised": "Original revised (Fire & Ice expansion)",
+  "game-board.original": "Original",
+  "game-boards-description": "{{num}} game boards to pick randomly from.",
+  "game-boards-invalid": "At least one game board is required.",
+  "game-boards": "Game boards",
   "generate": "Generate",
   "new-game": "New game",
   "number-of-factions-description": "Players can choose between {{num}} factions.",
