Pick game board and extra final scoring tile

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,6 +29,7 @@
   "build-date": "Build date:",
   "cancel": "Cancel",
   "end-round-reward": "End of round reward:",
+  "extra-final-scoring-tile": "Extra final scoring tile",
   "extra-final-scoring-tiles-description": "{{num}} extra final scoring tiles to pick randomly from.",
   "extra-final-scoring-tiles": "Extra final scoring tiles",
   "faction.acolytes": "Acolytes",
@@ -74,6 +75,7 @@
   "game-board.lakes": "Lakes (Merchants expansion)",
   "game-board.original-revised": "Original revised (Fire & Ice expansion)",
   "game-board.original": "Original",
+  "game-board": "Game board",
   "game-boards-description": "{{num}} game boards to pick randomly from.",
   "game-boards-invalid": "At least one game board is required.",
   "game-boards": "Game boards",
