Show generated setup in a different page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,10 +28,18 @@
   "bonus-cards": "Bonus cards",
   "build-date": "Build date:",
   "cancel": "Cancel",
+  "default-player-name.1": "The youngest",
+  "default-player-name.2": "The highest",
+  "default-player-name.3": "The funniest",
+  "default-player-name.4": "The rebel",
+  "default-player-name.5": "The imperialist",
   "end-round-reward": "End of round reward:",
   "extra-final-scoring-tile": "Extra final scoring tile",
   "extra-final-scoring-tiles-description": "{{num}} extra final scoring tiles to pick randomly from.",
   "extra-final-scoring-tiles": "Extra final scoring tiles",
+  "faction-select-mode.bid": "Bid",
+  "faction-select-mode.two-alternatives": "Two alernatives",
+  "faction-select-mode": "Faction select mode",
   "faction.acolytes": "Acolytes",
   "faction.alchemists": "Alchemists",
   "faction.auren": "Auren",
@@ -62,6 +70,8 @@
   "faction.vizirs": "Vizirs",
   "faction.witches": "Witches",
   "faction.yetis": "Yetis",
+  "factions-bid-on": "Factions to bid on",
+  "factions-choose": "Factions to choose from",
   "factions-description": "{{num}} factions to pick randomly from.",
   "factions-invalid": "There are more players than distinct terrains for the selected factions. Select more factions.",
   "factions": "Factions",
@@ -79,12 +89,18 @@
   "game-boards-description": "{{num}} game boards to pick randomly from.",
   "game-boards-invalid": "At least one game board is required.",
   "game-boards": "Game boards",
-  "generate": "Generate",
+  "generate-setup": "Generate setup",
+  "name-of-player": "Name of player {{num}}:",
+  "new-game-setup": "New game setup",
   "new-game": "New game",
-  "number-of-factions-description": "Players can choose between {{num}} factions.",
-  "number-of-factions": "Number of factions",
   "number-of-players": "Number of players",
   "ok": "OK",
+  "player.1": "1<sup>st</sup> player: {{name}}",
+  "player.2": "2<sup>nd</sup> player: {{name}}",
+  "player.3": "3<sup>rd</sup> player: {{name}}",
+  "player.4": "4<sup>th</sup> player: {{name}}",
+  "player.5": "5<sup>th</sup> player: {{name}}",
+  "players": "Players",
   "predefined-profile.all-official-and-unofficial": "All official and unofficial expansions",
   "predefined-profile.all-official": "Fire & Ice + Mini expansion + Merchants of the Seas (Official)",
   "predefined-profile.basic": "Basic game set, without extensions (Official)",
@@ -110,5 +126,6 @@
   "scoring-tiles-invalid": "At least 6 scoring tiles are required which could be combined in a way such that the same cult is not scored three times.",
   "scoring-tiles": "Scoring tiles",
   "settings": "Settings",
+  "setup": "Setup",
   "version": "Version:"
 }
