--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -71,7 +71,7 @@
   "faction.witches": "Witches",
   "faction.yetis": "Yetis",
   "factions-bid-on": "Factions to bid on",
-  "factions-choose": "Factions to choose from",
+  "factions-choose": "Factions to choose from:",
   "factions-description": "{{num}} factions to pick randomly from.",
   "factions-invalid": "There are more players than distinct terrains for the selected factions. Select more factions.",
   "factions": "Factions",
@@ -90,16 +90,16 @@
   "game-boards-invalid": "At least one game board is required.",
   "game-boards": "Game boards",
   "generate-setup": "Generate setup",
-  "name-of-player": "Name of player {{num}}:",
+  "name-of-player": "Name of player {{num}}",
   "new-game-setup": "New game setup",
   "new-game": "New game",
   "number-of-players": "Number of players",
   "ok": "OK",
-  "player.1": "1<sup>st</sup> player: {{name}}",
-  "player.2": "2<sup>nd</sup> player: {{name}}",
-  "player.3": "3<sup>rd</sup> player: {{name}}",
-  "player.4": "4<sup>th</sup> player: {{name}}",
-  "player.5": "5<sup>th</sup> player: {{name}}",
+  "player.1": "1<sup>st</sup> player:",
+  "player.2": "2<sup>nd</sup> player:",
+  "player.3": "3<sup>rd</sup> player:",
+  "player.4": "4<sup>th</sup> player:",
+  "player.5": "5<sup>th</sup> player:",
   "players": "Players",
   "predefined-profile.all-official-and-unofficial": "All official and unofficial expansions",
   "predefined-profile.all-official": "Fire & Ice + Mini expansion + Merchants of the Seas (Official)",
