Add extension categories

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -36,6 +36,12 @@
   "default-player-name.4": "The rebel",
   "default-player-name.5": "The imperialist",
   "end-round-reward": "End of round reward:",
+  "expansion.artifacts": "Artifacts (unofficial)",
+  "expansion.basic": "Basic game",
+  "expansion.fire-ice": "Fire & Ice",
+  "expansion.merchants": "Merchants",
+  "expansion.mini-expansion": "Mini expansion",
+  "expansion.power-coming": "Power is coming (unofficial)",
   "extra-final-scoring-tile": "Extra final scoring tile",
   "extra-final-scoring-tiles-description": "{{num}} extra final scoring tiles to pick randomly from.",
   "extra-final-scoring-tiles": "Extra final scoring tiles",
