Change about description

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "about-description": "Help doing Terra Mystica setup by choosing factions and tiles randomly.",
+  "about-description": "Help setting up Terra Mystica game by choosing factions and tiles randomly.",
   "about": "About",
   "action-phase-scoring.any-track-upgrade": "2 victory points when advancing on the Shipping or Exchange tracks.",
   "action-phase-scoring.dwelling": "2 victory points when building a dwelling.",
