--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -45,9 +45,9 @@
   "extra-final-scoring-tile": "Extra final scoring tile",
   "extra-final-scoring-tiles-description": "{{num}} extra final scoring tiles to pick randomly from.",
   "extra-final-scoring-tiles": "Extra final scoring tiles",
-  "faction-select-mode.bid": "Bid",
-  "faction-select-mode.two-alternatives": "Two alernatives",
-  "faction-select-mode": "Faction select mode",
+  "faction-pick-mode.bid": "Bid",
+  "faction-pick-mode.two-alternatives": "Two alernatives",
+  "faction-pick-mode": "Faction pick mode",
   "faction.acolytes": "Acolytes",
   "faction.alchemists": "Alchemists",
   "faction.auren": "Auren",
